--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "devDependencies":{
     "mocha":">= 1.12.0"
   },
+  "scripts":{
+    "test":"mocha"
+  },
   "repository":{
     "type":"git",
     "url":"https://github.com/andyhmltn/time_ago_in_words.git"
