Changed the test command to supply nicer output

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "mocha":">= 1.12.0"
   },
   "scripts":{
-    "test":"mocha"
+    "test":"mocha --reporter spec --colors"
   },
   "repository":{
     "type":"git",
